@@ -39,6 +39,7 @@
        no changelists are present. (Stefan)
 - NEW: two project properties (bugtraq:provideruuid and bugtraq:providerparams)
        to specifiy the IBugTraqProvider for the project. (Stefan)
+- NEW: Helper dialog to resolve property conflicts. (Stefan)
 - CHG: The bug-ID column width in the log dialog is now limited 
        to 200 pixels. (Stefan)
 - CHG: The right-drag context menu now only shows "Export" if a versioned
